objects/Services_Request__c.object
<CustomObject>
    <fields>
        <fullName>ARM_Functionality__c</fullName>
        <label>ARM Functionality</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AR_Test_Automation_Framework_TAF__c</fullName>
        <label>AR Test Automation Framework (TAF)</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>Opportunity__r.Account.Owner.FirstName + &apos; &apos; + Opportunity__r.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Request</relationshipLabel>
        <relationshipName>Services_Request</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Salesforce_DevOps_MaturityLevel__c</fullName>
        <label>Customer Salesforce DevOps MaturityLevel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Beginner</fullName>
                </value>
                <value>
                    <fullName>2 - Novice</fullName>
                </value>
                <value>
                    <fullName>3 - Practitioner</fullName>
                </value>
                <value>
                    <fullName>4 - Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Loader_Functionality__c</fullName>
        <label>Data Loader Functionality</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discounted_Services_Price__c</fullName>
        <label>Discounted Services Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Test_Environment__c</fullName>
        <label>Existing Test Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Urgency_Reason__c</fullName>
        <label>High Urgency Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integrations__c</fullName>
        <label>Integrations</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Test Automation Integration</fullName>
                </value>
                <value>
                    <fullName>nCino Integration</fullName>
                </value>
                <value>
                    <fullName>Vlocity Integration</fullName>
                </value>
                <value>
                    <fullName>Provar Integration</fullName>
                </value>
                <value>
                    <fullName>Other (Detail in Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_Partner_Involvement__c</fullName>
        <label>Level of Partner Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Involved_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leading the Engagement</fullName>
                </value>
                <value>
                    <fullName>Keep Informed</fullName>
                </value>
                <value>
                    <fullName>Hands Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Service_Price__c</fullName>
        <label>List Services Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_to_Requestor__c</fullName>
        <label>Notes to Requestor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_ARM_Subs__c</fullName>
        <formula>Opportunity__r.Number_of_Product_Subscriptions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of ARM Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Line_of_Business__c</fullName>
        <inlineHelpText>Number of Line of Business (Separate Items)</inlineHelpText>
        <label>Number of Line of Business</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Orgs__c</fullName>
        <label>Number of Orgs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_VPN_Connections__c</fullName>
        <inlineHelpText># of VPN Connections</inlineHelpText>
        <label>Number of VPN Connections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vault_Subs__c</fullName>
        <formula>Opportunity__r.No_of_Product_Subs_Vault__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Vault Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.OpportunityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName  &amp; &apos; &apos; &amp;  Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_at_Request__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage at Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Services Request</relationshipLabel>
        <relationshipName>Services_Request</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Involved_2__c</fullName>
        <label>Partner Involved</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Involved__c</fullName>
        <formula>TEXT(Opportunity__r.Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Involved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Opportunity__r.Partner_Name_New__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presales_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presales Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Request_SA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Opportunity__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Access_Verification__c</fullName>
        <label>Remote Access Verification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Budgetary Quote</fullName>
                </value>
                <value>
                    <fullName>ES Consultation/Scoping</fullName>
                </value>
                <value>
                    <fullName>POC Assistance</fullName>
                </value>
                <value>
                    <fullName>SOW Document Required</fullName>
                    <isActive>false</isActive>
                    <label>SOW Document Required</label>
                </value>
                <value>
                    <fullName>SOW - Implementation Services</fullName>
                </value>
                <value>
                    <fullName>SOW - Managed Services</fullName>
                </value>
                <value>
                    <fullName>SOW - POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requesting_Employee__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDX__c</fullName>
        <label>SFDX</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Notes_and_Attachments__c</fullName>
        <formula>HYPERLINK(&quot;https://ap6.lightning.force.com/lightning/r/&quot;&amp;Id&amp;&quot;/related/CombinedAttachments/view&quot;, &quot;Click here to view/add&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Notes and Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Status__c</fullName>
        <label>SR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 - New</fullName>
                    <default>true</default>
                    <label>1 - New</label>
                </value>
                <value>
                    <fullName>2 - In Progress</fullName>
                </value>
                <value>
                    <fullName>3 - Provided to Sales</fullName>
                </value>
                <value>
                    <fullName>4 - Revisions in Progress</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Won</fullName>
                </value>
                <value>
                    <fullName>6 - Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <isActive>false</isActive>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <isActive>false</isActive>
                    <label>Not Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Hours__c</fullName>
        <label>Service Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Opportunities__c</fullName>
        <label>Upsell Opportunities</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency_Level__c</fullName>
        <label>Urgency Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Connectivity__c</fullName>
        <label>VPN Connectivity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vault_Functionality__c</fullName>
        <label>Vault Functionality</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Services Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Requesting_Employee__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Service_Hours__c</columns>
        <columns>List_Service_Price__c</columns>
        <columns>Discounted_Services_Price__c</columns>
        <columns>Notes_to_Requestor__c</columns>
        <columns>SR_Notes_and_Attachments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Services Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandate_High_Urgency_Reason</fullName>
        <active>true</active>
        <description>High Urgency Reason will be required when the &apos;Urgency Level&apos; is selected as &apos;High&apos;.</description>
        <errorConditionFormula>AND(
ISPICKVAL( Urgency_Level__c , &apos;High&apos;),
ISBLANK(High_Urgency_Reason__c) 
)</errorConditionFormula>
        <errorMessage>Please enter the &apos;High Urgency Reason&apos; to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandate_Services_Hours_and_Price_Fields</fullName>
        <active>true</active>
        <description>Mandate Service Details (ES Team to Update)
Service Hours
List Services Price
Discounted Services Price</description>
        <errorConditionFormula>AND ( ISPICKVAL( SR_Status__c , &apos;3 - Provided to Sales&apos;) ,  
OR(
ISBLANK( Service_Hours__c ),
ISBLANK(List_Service_Price__c) , 
ISBLANK( Discounted_Services_Price__c)
)
)</errorConditionFormula>
        <errorMessage>&apos;Service Hours&apos;, &apos;List Service Price&apos;, and &apos;Discounted Services Price&apos; are required when &apos;SR Status&apos; is &apos;Provided to Sales&apos;. Please enter all the required fields to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>To_Mandate_Number_of_VPN_Connections</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( VPN_Connectivity__c, &apos;Yes&apos;),   ISBLANK(Number_of_VPN_Connections__c)
)</errorConditionFormula>
        <errorMessage>Please enter &apos;Number of VPN Connections&apos; since you have choosen &apos;VPN Connectivity&apos; as &apos;Yes&apos;.</errorMessage>
    </validationRules>
</CustomObject>